--- a/static/supplier/index.html
+++ b/static/supplier/index.html
@@ -43,11 +43,10 @@
             <h4>Search</h4>
             <div class="row">
               <div class="span12">
-                <p><input id="text-search" type="text" placeholder="Search" disabled="disabled"></p>
                 <p><input name="is_printed" type="radio" value="printed" disabled="disabled">&nbsp;Printed</p>
                 <p><input name="is_printed" type="radio" value="unprinted" checked="checked" disabled="disabled">&nbsp;Un-Printed</p>
                 <p><input name="is_printed" type="radio" value="both" disabled="disabled">&nbsp;Both</p>
-                <p><input id="order_date" type="date" disabled="disabled">&nbsp;<input id="order_date" type="time" disabled="disabled"></p>
+                <p><input id="order_date" type="date"></p>
               </div>
             </div>
             <!-- Submit Search Button -->
