On Accordiance vs Table Decision

--- a/static/supplier/order_batch_item_list.html
+++ b/static/supplier/order_batch_item_list.html
@@ -36,7 +36,7 @@
 <body>
   <div id="wrapper">
     <section id="content">
-      <!-- Search -->
+      <!-- Head -->
       <div class="container">
         <div class="row demobtn">
           <div class="span12">
@@ -52,7 +52,7 @@
             <!-- Submit Search Button -->
             <div class="row">
               <div class="span12">
-                <a id="btn-search"  href="#" class="btn btn-inverse btn-rounded" disabled="disabled"><i class="icon-search"></i>Search</a>
+                <a href="#" id="btn-print-current-order-batch" class="btn btn-inverse btn-rounded" disabled="disabled"><i class="icon-search"></i>Print</a>
               </div>
             </div>
             <!-- /Submit Search Button -->
@@ -111,50 +111,6 @@
               </tbody>
             </table>            
           </div>
-              <div class="span6">
-                <h4>Accordion</h4>
-                <!-- start: Accordion -->
-                <div class="accordion" id="accordion2">
-                  <div class="accordion-group">
-                    <div class="accordion-heading">
-                      <a class="accordion-toggle active" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-									<i class="icon-minus"></i> A1 2020-01-29 15:00</a>
-                    </div>
-                    <div id="collapseOne" class="accordion-body collapse in">
-                      <div class="accordion-inner">
-                        <p>Item 1</p>
-                        <p>Item 2</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-group">
-                    <div class="accordion-heading">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-									<i class="icon-plus"></i> Collapsible Group Item #2 </a>
-                    </div>
-                    <div id="collapseTwo" class="accordion-body collapse">
-                      <div class="accordion-inner">
-                        <p>Item 1</p>
-                        <p>Item 2</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-group">
-                    <div class="accordion-heading">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-									<i class="icon-plus"></i> Collapsible Group Item #3 </a>
-                    </div>
-                    <div id="collapseThree" class="accordion-body collapse">
-                      <div class="accordion-inner">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!--end: Accordion -->
-              </div>
         </div>
       </div>
       <!-- /Order Batch List -->
@@ -185,7 +141,7 @@
   <script src="js/custom.js"></script>
   <script src="js/smart_config.js"></script>
   <script src="js/smart_fn.js"></script>
-  <script src="js/smart_main.js"></script>
+  <script src="js/smart_order_batch_item_list.js"></script>
 
 </body>
 
